CREATE TABLE `MN_POS_CORP_INSTL`
(
    `CORP_INSTL_PID`      bigint       NOT NULL AUTO_INCREMENT COMMENT '업체_설치_순번',
    `STORE_UNQCODE`       varchar(14)  NOT NULL COMMENT '매장_고유코드',
    `POS_PID`             bigint       NOT NULL COMMENT '포스_순번',
    `FCHQ_CODE`           varchar(7)   NOT NULL COMMENT '본사_코드',
    `FCHQ_NM`             varchar(50)  NOT NULL COMMENT '본사_명',
    `STORE_NM`            varchar(50)  NOT NULL COMMENT '매장_명',
    `POS_NO`              varchar(50)  NOT NULL COMMENT '포스_번호',
    `MGMT_CORP_CODE`      varchar(7)   NOT NULL COMMENT '관리_업체_코드',
    `MGMT_CORP_NM`        varchar(50)  NOT NULL COMMENT '관리_업체_명',
    `INSTL_CORP_CODE`     varchar(7) COMMENT '설치_업체_코드',
    `INSTL_CORP_NM`       varchar(50) COMMENT '설치_업체_업체명',
    `INSTL_RQST_DT`       datetime COMMENT '설치_의뢰_일자',
    `INSTL_RQST_STAFF_NM` varchar(50) COMMENT '설치_의뢰_사원_명',
    `INSTL_RQST_STAFF_ID` varchar(100) COMMENT '설치_의뢰_사원_ID',
    `INSTL_DT`            datetime COMMENT '설치_일자',
    `INSTL_STAFF_NM`      varchar(50) COMMENT '설치_사원_명',
    `INSTL_STAFF_ID`      varchar(100) COMMENT '설치_사원_ID',
    `INSTL_STT_CODE`      varchar(7) COMMENT '설치_상태_코드',
    `INSTL_CODE`          varchar(7) COMMENT '설치_코드',
    `INSTL_NOTE`          varchar(400) COMMENT '설치_비고',
    `INSTL_ODR_CNT`       int(11)      NOT NULL DEFAULT 0 COMMENT '설치_차_수',
    `CREATOR`             varchar(100) NOT NULL COMMENT '작성자',
    `CREATED_AT`          timestamp    NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT '생성시간',
    `UPDATER`             varchar(100) NOT NULL COMMENT '수정자',
    `UPDATED_AT`          timestamp    NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '변경시간',
    PRIMARY KEY (`CORP_INSTL_PID`),
    INDEX mn_pos_corp_instl_idx (`STORE_UNQCODE`, `POS_PID`, `CREATED_AT`)
) ENGINE = InnoDB
  DEFAULT CHARSET = utf8mb4