@startuml 

 left to right direction
entity "MN_POS_CORP" as mnPosCorp {
	포스 설치 업체
	--
	POS_CORP_PID : BIGINT <<PK>>
  --
  ECLL_CORP_SE_CODE : VARCHAR(1)
  CORP_SE_CODE : VARCHAR(1)
  CORP_CODE : VARCHAR(7)
  VAN_CORP_CODE : VARCHAR(7)
  HIGH_CORP_CODE : VARCHAR(7)
  CORP_NM : VARCHAR(50)
  REP_NM : VARCHAR(50)
  CORP_NO : VARCHAR(20)
  COM_NM : VARCHAR(50)
  CORP_TYPE_NM : VARCHAR(50)
  CORP_TELNO : VARCHAR(20)
  CORP_CELNO : VARCHAR(20)
  CORP_FAXNO : VARCHAR(20)
  INSTL_PSBLT_AT : VARCHAR(1)
  USE_AT : VARCHAR(1)
  EDCTN_AT : VARCHAR(1)
  CORP_ADRES : VARCHAR(100)
  CORP_NOTE : VARCHAR(400)
  MNTHL_CRTF_SE_CODE : VARCHAR(1)
  ASP_MNTHL_CRTF_CNT : INT(11)
  ASP_MNTHL_CRTF_PRICE : INT(11)
  LOCAL_MNTHL_CRTF_CNT : INT(11)
  LOCAL_MNTHL_CRTF_PRICE : INT(11)
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP  <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP
}

entity "MN_POS_CORP_INSTL_STATS" as mnPosCorpInstlStats {
	포스 업체 설치 통계
	--
	CORP_INSTL_STATS_PID : BIGINT <<PK>>
  --
  SALE_CORP_CODE : VARCHAR(7) <<idx>>
  BUY_CORP_CODE : VARCHAR(7)  <<idx>>
  CORP_INSTL_STATS_CODE : VARCHAR(7)
  ASP_SALE_CNT : INT(11)
  ASP_SALE_PRICE : INT(11)
  ASP_BUY_CNT : INT(11)
  ASP_BUY_PRICE : INT(11)
  LOCAL_SALE_CNT : INT(11)
  LOCAL_SALE_PRICE : INT(11)
  LOCAL_BUY_CNT : INT(11)
  LOCAL_BUY_PRICE : INT(11)
  CORP_AUTH_NOTE : VARCHAR(400)
  STORE_UNQCODE : VARCHAR(14)
  POS_NO : VARCHAR(50)
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP  <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP
 }
entity "MN_POS_CORP_INSTL_DAILY_STATS" as mnPosCorpInstlDailyStats {
	포스 업체 설치 일일 통계
	--
	CORP_INSTL_DAILY_PID : BIGINT <<PK>>
  --
  POS_CORP_PID : BIGINT <<idx>>
  DAILY_ASP_BUY_CNT : INT(11)
  DAILY_LOCAL_BUY_CNT : INT(11)
  DAILY_ASP_SALE_CNT : INT(11)
  DAILY_LOCAL_SALE_CNT : INT(11)
  DAILY_ASP_INSTL_CNT : INT(11)
  DAILY_LOCAL_INSTL_CNT : INT(11)
  DAILY_CALC_DE : INT
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP  <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMPTIMESTAMP
}

entity "MN_POS_CORP_INSTL" as mnPosCorpInstl {
  포스 업체 설치
  --
  CORP_INSTL_PID : BIGINT <<PK>>
  --
  STORE_UNQCODE : VARCHAR(14) <<idx>>
  POS_PID : BIGINT  <<idx>>
  FCHQ_CODE : VARCHAR(7)
  FCHQ_NM : VARCHAR(50)
  STORE_NM : VARCHAR(50)
  POS_NO : VARCHAR(50)
  MGMT_CORP_CODE : VARCHAR(7)
  MGMT_CORP_NM : VARCHAR(50)
  INSTL_CORP_CODE : VARCHAR(7)
  INSTL_CORP_NM : VARCHAR(50)
  INSTL_RQST_DT : DATETIME
  INSTL_RQST_STAFF_NM : VARCHAR(50)
  INSTL_RQST_STAFF_ID : VARCHAR(100)
  INSTL_DT : DATETIME
  INSTL_STAFF_NM : VARCHAR(50)
  INSTL_STAFF_ID : VARCHAR(100)
  INSTL_STT_CODE : VARCHAR(7)
  INSTL_CODE : VARCHAR(7)
  INSTL_NOTE : VARCHAR(400)
  INSTL_ODR_CNT : INT(11)
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP  <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP
}

entity "MN_POS_CORP_INSTL_H" as mnPosCorpInstlH {
  포스 업체 설치 이력
  --
  CORP_INSTL_H_PID : BIGINT <<PK>>
  --
  STORE_UNQCODE : VARCHAR(14) <<idx>>
  POS_PID : BIGINT  <<idx>>
  FCHQ_CODE : VARCHAR(7)
  FCHQ_NM : VARCHAR(50)
  STORE_NM : VARCHAR(50)
  POS_NO : VARCHAR(50)
  POS_INSTL_CNT : INT(11)
  MGMT_CORP_CODE : VARCHAR(7)
  MGMT_CORP_NM : VARCHAR(50)
  INSTL_CORP_CODE : VARCHAR(7)
  INSTL_CORP_NM : VARCHAR(50)
  INSTL_RQST_DT : DATETIME
  INSTL_RQST_STAFF_NM : VARCHAR(50)
  INSTL_RQST_STAFF_ID : VARCHAR(100)
  INSTL_DT : DATETIME
  INSTL_STAFF_NM : VARCHAR(50)
  INSTL_STAFF_ID : VARCHAR(100)
  INSTL_STT_CODE : VARCHAR(7)
  INSTL_CODE : VARCHAR(7)
  INSTL_NOTE : VARCHAR(400)
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP  <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP

}

entity "MN_POS_CORP_TRNSF" as mnPosCorpTrnsf {
  포스 업체 이관
  --
	CORP_TRNSF_PID : BIGINT <<PK>>
  --
  STORE_UNQCODE : VARCHAR(14) <<idx>>
  FCHQ_CODE : VARCHAR(7)
  FCHQ_NM : VARCHAR(50)
  STORE_NM : VARCHAR(50)
  STT_CODE : VARCHAR(7)
  TO_TRNSF_CORP_CODE : VARCHAR(7)
  TO_TRNSF_CORP_NM : VARCHAR(50)
  TO_TRNSF_REGI_DT : DATETIME
  TO_TRNSF_STAFF_NM : VARCHAR(50)
  TRNSF_HIGH_CORP_CODE : VARCHAR(7)
  TRNSF_HIGH_CORP_NM : VARCHAR(50)
  TRNSF_CHCK_DT : DATETIME
  TRNSF_CHCK_STAFF_NM : VARCHAR(50)
  FROM_TRNSF_CORP_CODE : VARCHAR(7)
  FROM_TRNSF_CORP_NM : VARCHAR(50)
  FROM_TRNSF_REGI_DT : DATETIME
  FROM_TRNSF_STAFF_NM : VARCHAR(50)
  TRNSF_CANCEL_DT : DATETIME
  TRNSF_CANCEL_STAFF_NM : VARCHAR(50)
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP  <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP
}


 entity "MN_POS_CORP_STAFF" as mnPosCorpStaff {
    사원
    --
    CORP_STAFF_PID : BIGINT <<PK>>
    --
    STAFF_ID : VARCHAR(100)
    STAFF_NO : VARCHAR(10)
    STAFF_NM : VARCHAR(100)
    STAFF_CARDNO : VARCHAR(100)
    STAFF_TELNO : VARCHAR(20)
    STAFF_CELNO : VARCHAR(20)
    STAFF_EMAIL : VARCHAR(200)
    STAFF_ADRES : VARCHAR(256)
    STAFF_NOTE : VARCHAR(400)
    MGMT_CORP_CODE : VARCHAR(7)
    DEPT_CODE : VARCHAR(7)
    LEVEL_CODE : VARCHAR(7)
    POSITION_CODE : VARCHAR(7)
    STATUS_CODE : VARCHAR(7)
    WEB_AT : VARCHAR(1)
    SMS_AT : VARCHAR(1)
    ADTNL_FIELD_1 : VARCHAR(100)
    ADTNL_FIELD_2 : VARCHAR(100)
    ADTNL_FIELD_3 : VARCHAR(100)
    ADTNL_FIELD_4 : VARCHAR(100)
    ADTNL_FIELD_5 : VARCHAR(100)
    CREATOR : VARCHAR(100)
    CREATED_AT : TIMESTAMP  <<idx>>
    UPDATER : VARCHAR(100)
    UPDATED_AT : TIMESTAMP
  }

'========================================외부 도메인================================================
entity "MN_STM_M" as mnStmM {
  외부 - 매장관리 마스터
  --
  STORE_PID : INT <<pk>>
  --
}

entity "MN_POS" as mnPos {
  외부 - 포스
  --
 	POS_PID : BIGINT	 <<PK>>
 	--
 }


'========================================ERD DIAGRAM===============================================

mnStmM ||..o{ mnPos
mnPosCorp ||..o{ mnStmM

mnPosCorp ||..o{ mnPosCorpInstlStats
mnPosCorpInstlStats ||..o{ mnPosCorpInstlDailyStats
mnPosCorp ||..o{ mnPosCorpInstl
mnPosCorpInstl ||..o{ mnPosCorpInstlH

mnPosCorpTrnsf ||..|| mnPosCorp
mnPosCorp ||..o{ mnPosCorpStaff
@enduml